--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <!--! Css file -->
-    <link rel="stylesheet" href="css/Templet_One.css">
+    <link rel="stylesheet" href="css/style.css">
     <!--! Normalize -->
     <link rel="stylesheet" href="css/Normalize.css">
     <!--! Font Awesome library-->
